dont make header fixed on smaller screen sizes

--- a/ui.css
+++ b/ui.css
@@ -81,8 +81,14 @@ h1,h2,h3,h4,h5,h6 {
 
 
 @media (max-width: 767px) {
+    #headerMenu {
+        position: relative;
+    }
     #headerMenu ul {
         text-align: center;
+    }
+    #headerMenu a {
+        font-size:80%;
     }
 
     .content {
